feat: add information-block module

--- a/src/components/UI/information-block/Information-block.module.scss
+++ b/src/components/UI/information-block/Information-block.module.scss
@@ -7,7 +7,7 @@
         box-sizing: content-box;
         width: fit-content;
         color: $clr-base-dk;
-        font-weight: $fw-thk;
+        font-weight: $fw-thkr;
         background-color: $clr-secondary;
         padding: 0 9px;
         line-height: 133%;
