feat: extend mixin functionality

--- a/src/styles/abstracts/_mixins.scss
+++ b/src/styles/abstracts/_mixins.scss
@@ -1,8 +1,9 @@
-@mixin centerredContentVH($cross: center, $main: center, $direction: row) {
+@mixin centerredContentVH($cross: center, $main: center, $direction: row, $gap: 0px) {
     display: flex;
     flex-direction: $direction;
     justify-content: $main;
     align-items: $cross;
+    gap: $gap;
 }
 
 @mixin slightBoxShadow {
