fix: change active state implementation

--- a/src/components/UI/anchor/Anchor.module.scss
+++ b/src/components/UI/anchor/Anchor.module.scss
@@ -45,8 +45,15 @@ $block-height: 43px;
                     text-shadow: none;
                 }
             }
+            
+            &:focus-visible {
+                outline: none;
+                color: $clr-base-dk;
+            }
 
         }
+
+       
     }
 
 }
