--- a/src/components/page-layout/page-layout.module.scss
+++ b/src/components/page-layout/page-layout.module.scss
@@ -1,30 +1,57 @@
+@import "../../styles/abstracts/mixins";
+@import "../../styles/abstracts/variables";
+
 .page-layout {
-    display: grid;
-    grid-template-columns: 20% 1fr 20%;
-    grid-template-rows: 1fr 1fr 60px; //temp
-    grid-template-areas: "al h ar" "al c ar" "f f f";
+    @include centerredContentVH($cross: center, $main: flex-start, $direction: column, $gap: 0px);
+    gap: 15px;
     width: 100%;
     height: 100%;
     margin: 29px 0 95px 0;
 }
 
-.aside-left {
-    grid-area: al;
+.horizontal-wrap {
+    @include centerredContentVH($cross: flex-start, $main: center, $direction: row, $gap: 0px);
+    gap: 1vw;
+}
+
+.aside {
+
+    .nav-wrap {
+        position: sticky;
+        top: 29px;
+    }
+
+    .socials-wrap {
+        position: sticky;
+        top: 50dvh;
+        transform: translateY(-50%);
+    }
+
+    &:last-child {
+        align-self: end;
+    }
 }
 
 .hero {
-    grid-area: h;
+    width: 920px;
+    background: url(../../assets/images/intro-bg.png) center;
+    background-size: 110%;
+    background-position-x: -58px;
+    background-position-y: 44px;
+
+    &__image-wrap {
+        width: fit-content;
+        margin: 0 auto;
+    }
+
+    &__intro-wrap {
+        
+
+    }
 }
 
-.main {
-    grid-area: c;
-}
-
-.aside-right {
-    grid-area: ar;
-}
-
-.footer {
-    grid-area: f;
+.content {
+    max-width: 1000px;
+    min-width: 360px;
 }
 
