--- a/src/components/UI/photo-frame/photo-frame.module.scss
+++ b/src/components/UI/photo-frame/photo-frame.module.scss
@@ -5,40 +5,18 @@
     position: relative;
     width: 100%;
     height: 100%;
-    background: left/cover no-repeat url(../../../assets/images/phone-frame-light.svg);
+    background: center/cover no-repeat url(../../../assets/images/phone-frame-light.svg);
 
     &_plain {
         @extend .photo-frame;
-        background: url(../../../assets/images/plain-phone-container-1.svg);
-        
-        &_lg {
-            @extend .photo-frame_plain;
-            width: 250.5px;
-            height: 433px;
-        }
-
-        &_sm {
-            @extend .photo-frame_plain;
-            width: 227px;
-            height: 393px;
-        }
+        background: center/cover no-repeat url(../../../assets/images/phone-frame-plain.png);
+        box-shadow: 0px 5.26px 52.63px 0px rgba(0, 0, 0, 0.62);
     }
 
     &_designed {
         @extend .photo-frame;
-        background: url(../../../assets/images/designed-phone-container-1.svg);
-        
-        &_lg {
-            @extend .photo-frame_designed;
-            width: 292px;
-            height: 504px;
-        }
-
-        &_sm {
-            @extend .photo-frame_designed;
-            width: 280px;
-            height: 484px;
-        }
+        background: center/cover no-repeat url(../../../assets/images/phone-frame-designed.png);
+        box-shadow: 0px 5.26px 52.63px 0px rgba(0, 0, 0, 0.62);
     }
 
     &__wrap {
