--- a/src/components/page-layout/page-layout.module.scss
+++ b/src/components/page-layout/page-layout.module.scss
@@ -1,8 +1,12 @@
 @import "../../styles/abstracts/mixins";
 @import "../../styles/abstracts/variables";
 
+.header {
+    margin-bottom: calc(50px + 114px);
+}
+
 .page-layout {
-    @include centerredContentVH($cross: center, $main: flex-start, $direction: column, $gap: 0px);
+    // @include centerredContentVH($cross: flex-start, $main: center, $direction: row, $gap: 0px);
     gap: 15px;
     width: 100%;
     height: 100%;
@@ -14,21 +18,21 @@
     gap: 1vw;
 }
 
-.aside {
+.page-layout__aside {
 
-    .nav-wrap {
-        position: sticky;
+    z-index: 10;
+
+    &.nav-wrap {
+        position: fixed;
+        left: 3vw;
         top: 29px;
     }
 
-    .socials-wrap {
-        position: sticky;
+    &.socials-wrap {
+        position: fixed;
+        right: 10vw;
         top: 50dvh;
         transform: translateY(-50%);
-    }
-
-    &:last-child {
-        align-self: end;
     }
 }
 
@@ -36,8 +40,8 @@
     width: 920px;
     background: url(../../assets/images/intro-bg.png) center;
     background-size: 110%;
-    background-position-x: -58px;
-    background-position-y: 44px;
+    background-position-x: -59px;
+    background-position-y: 16px;
 
     &__image-wrap {
         width: fit-content;
@@ -54,4 +58,3 @@
     max-width: 1000px;
     min-width: 360px;
 }
-
