feat: add list style

--- a/src/components/UI/plan-card/card-list/card-list-item/card-list-item.module.scss
+++ b/src/components/UI/plan-card/card-list/card-list-item/card-list-item.module.scss
@@ -4,6 +4,7 @@
 .card-list__item {
     font-size: $fs-tny;
     line-height: 100%;
+    list-style: disc;
     
     &::marker {
         font-size: $fs-tnst;
