feat: add mixin

--- a/src/styles/abstracts/_mixins.scss
+++ b/src/styles/abstracts/_mixins.scss
@@ -11,3 +11,8 @@
     -moz-box-shadow: 0px 0px 0px 1px rgba(75, 0, 128, 1) inset;
     box-shadow: 0px 0px 0px 1px rgba(75, 0, 128, 1) inset;
 }
+
+@mixin cardSizeCQW($cardWidth, $ratio) {
+    width: $cardWidth;
+    height: #{$cardWidth / $ratio}
+}
