--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -21,15 +21,15 @@ $clr-rad-grad-blue: linear-gradient(180.00deg, rgb(105, 34, 255),rgb(66, 0, 205)
 $ff-base: Montserrat;
 
 //font size
-$fs-base: 16px;
-$fs-tny: 14px;
-$fs-tnst: 10px;
-$fs-sml: 20px;
-$fs-med: 24px;
-$fs-med-plus: 25.5px;
-$fs-med-extra: 31px;
-$fs-lg: 36.5px;
-$fs-lgst: 48px;
+$fs-base: 1rem;
+$fs-tny: 0.88rem;
+$fs-tnst: 0.6rem;
+$fs-sml: 1.25rem;
+$fs-med: 1.5rem;
+$fs-med-plus: 1.6rem;
+$fs-med-extra: 1.9rem;
+$fs-lg: 2.3rem;
+$fs-lgst: 3rem;
 
 //font weight
 $fw-base: 600;
@@ -39,5 +39,19 @@ $fw-thk: 600;
 $fw-thkr: 700;
 $fw-thkr-plus: 800;
 $fw-thkst: 900;
+
+
+//screen width
+$sw-max: 1316px;
+$sw-breakPoint-2: 1090px;
+$sw-breakPoint-3: 950px;
+$sw-breakPoint-4: 840px;
+$sw-breakPoint-5: 560px;
+
+//container max widths
+$cw-base: 920px;
+$cw-medium: 794px;
+
+
 
 
