--- a/src/components/UI/plan-card/card-header/card-header.module.scss
+++ b/src/components/UI/plan-card/card-header/card-header.module.scss
@@ -8,7 +8,7 @@
   &__header {
     position: relative;
     color: $clr-secondary-ltr;
-    font-size: $fs-med;
+    font-size: max(20px, $fs-med);
     font-weight: $fw-thkr;
     font-style: italic;
     line-height: 133.4%;
@@ -38,7 +38,7 @@
     border-radius: 53px;
     background: $clr-primary;
     color: $clr-secondary-lt;
-    font-size: $fs-tny;
+    font-size: max(14px, $fs-tny);
     font-weight: $fw-base;
     line-height: 133.4%;
     padding: 1px 8px;
