--- a/src/components/UI/emoji-card/emoji-card.module.scss
+++ b/src/components/UI/emoji-card/emoji-card.module.scss
@@ -2,13 +2,13 @@
 @import "../../../styles/abstracts/variables";
 
 .emoji-card {
-    @include centerredContentVH($cross: center, $main: flex-start, $direction: row, $gap: 7.5px);
+    @include centerredContentVH($cross: center, $main: flex-start, $direction: row, $gap: 2%);
 
     position: absolute;
-    top: -33px;
-    left: -16px;
+    top: -8%;
+    left: -7%;
     z-index: 2;
-    padding: 5px 19px;
+    padding: 2% 6%;
     background-color: $clr-plain;
     box-shadow: 2px 3px 0px 0px $clr-dk;
     transform: rotate(14.32deg);
@@ -16,8 +16,8 @@
     &_designed {
         top: auto;
         left: auto;
-        bottom: 36px;
-        right: -69px;
+        bottom: 7%;
+        right: -20%;
         background-color: $clr-secondary;
         box-shadow: 2px 3px 0px 0px $clr-primary;
         transform: rotate(-15.39deg);
@@ -36,16 +36,18 @@
 }
 
 .emoji {
-
-    width: 36px;
-    height: 36px;
-    background: url(../../../assets/icons/sad-face-emoji.svg) no-repeat;
+    width: 4cqw;
+    height: 4cqw;
+    margin-left: 5px;
+    max-width: 36px;
+    max-height: 36px;
+    background: url(../../../assets/icons/sad-face-emoji.svg) no-repeat center;
     background-size: cover;
     transform: rotate(-7.32deg);
 
     &_designed {
-        margin-left: 5px;
-        background: url(../../../assets/icons/flame-emoji.svg) no-repeat;
+        //margin-left: 5px;
+        background: url(../../../assets/icons/flame-emoji.svg) no-repeat center;
         background-size: cover;
         transform: rotate(5.39deg);
 
