--- a/src/components/intro/intro.module.scss
+++ b/src/components/intro/intro.module.scss
@@ -3,10 +3,11 @@
 
 .intro {
     @include centerredContentVH($cross: center, $main: flex-start, $direction: column, $gap: 0px);
-    width: 920px;
-    height: 640px; //temp
+    max-width: 920px;
+    width: 100%;
+    //height: 640px; //temp
     position: relative;
-    padding: 23px 42px 0;
+    padding: 2% 6% 0;
 
     &__header {
         color: $clr-secondary-ltr;
@@ -14,29 +15,30 @@
         font-weight: $fw-thkst;
         line-height: 100.9%;
         text-transform: uppercase;
-        padding-bottom: 34px;
+        padding-bottom: 6%;
     }
 
     &__info-wrap {
+        width: 50%;
         display: flex;
         align-items: flex-end;
         position: absolute;
-        left: 46px;
-        bottom: -20px;
+        left: 4.5%;
+        bottom: -7%;
 
     }
 
     &__arrow {
         display: block;
         position: absolute;
-        top: 408px;
-        right: 110px;
-        z-index: 25;
-        transform: rotate(-4deg);
-        max-width: 263px;
-        min-width: 210px;
+        top: 84%;
+        right: 41%;
+        z-index: 5;
+        transform: rotate(-9deg);
+        max-width: 209px;
+        min-width: 88px;
         width: 20cqw;
-        height: 216px;
+        height: 32%;
         background: url(../../assets/images/curved-arrow.svg) center no-repeat;
         background-size: contain;
     }
@@ -44,20 +46,29 @@
 }
 
 .cards {
+    $plain-card-w: 30cqw;
+    $designed-card-w: 36cqw;
+
     @include centerredContentVH($cross: center, $main: center, $direction: row, $gap: 6vw);
     position: relative;
 
 
+
     &__plain-card {
-        margin-top: -45px;
-        width: 230px;
-        height: 394px;
+        @include cardSizeCQW( $plain-card-w, 0.5793);
+        margin-top: -6%;
+
+        max-width: 230px;
+        max-height: 394px;
         transform: rotate(-8.50deg);
     }
 
     &__designed-card {
-        width: 292px;
-        height: 504px;
+
+        @include cardSizeCQW( $designed-card-w, 0.5793);
+
+        max-width: 292px;
+        max-height: 504px;
         transform: rotate(9.46deg);
     }
 
