--- a/src/components/portfolio-section/portfolio-section.module.scss
+++ b/src/components/portfolio-section/portfolio-section.module.scss
@@ -9,37 +9,81 @@
 
 .content-wrap {
     @include centerredContentVH($cross: center, $main: flex-start, $direction: column, $gap: 0px);
-    width: 920px;
-    padding: 0 42px;
-    max-width: 954px;
+    max-width: 920px;
+    width: 100%;
+    padding: 0 3%;
 }
 
 .portfolio__header {
     align-self: flex-start;
     width: 100%;
-    margin-bottom: 45px;
+    margin-bottom: 5%;
 }
 
 .portfolio__cards {
+    width: 100%;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-auto-rows: auto;
     grid-auto-flow: row;
-    gap: 19px 21px;
     margin-bottom: calc(102px + 52px);
+    gap: 1cqw;
+
+    @media screen and (max-width: 865px) {
+        justify-content: center;
+        grid-template-columns: repeat(auto-fill, minmax(192px, 193px));
+    }
 
 }
 
 .portfolio__card-wrap {
     width: 192px;
     height: 328px;
+    place-self: center;
+
 
     &:nth-child(2n) {
         transform: translateY(102px);
+    }
+
+    @media screen and (max-width: 865px) {
+        &:nth-child(2n) {
+            transform: translateY(0);
+        }
+
+        &:nth-child(3n + 2) {
+            transform: translateY(102px);
+        }
+
+        &:last-child {
+            display: none;
+        }
+
+
+    }
+
+    @media screen and (max-width: 646px) {
+        &:nth-child(3n + 2) {
+            transform: translateY(0);
+        }
+
+        &:last-child {
+            display: block;
+        }
     }
 }
 
 .portfolio__btns {
     @include centerredContentVH($cross: flex-start, $main: center, $direction: row, $gap: 23px);
     flex-wrap: wrap;
+    width: 100%;
+}
+
+.portfolio__btn-wrap {
+    width: 100%;
+    height: 2cqw;
+    max-width: 255px;
+    max-height: 38px;
+    min-height: 30px;
+    min-width: fit-content;
 }
