--- a/src/components/prices-section/prices-section.module.scss
+++ b/src/components/prices-section/prices-section.module.scss
@@ -1,10 +1,16 @@
 @import "../../styles/abstracts/mixins";
 @import "../../styles/abstracts/variables";
 
+@function custom-blur($index) {
+    @if($index >= 3) {
+        @return blur(0px);
+    }
+}
+
 .prices {
     @include centerredContentVH($cross: center, $main: center, $direction: column, $gap: 0px);
     position: relative;
-    margin-bottom: 69px;
+    margin-bottom: 5.4%;
 
 }
 
@@ -12,33 +18,90 @@
     z-index: -1;
     position: absolute;
     height: 100%;
-    width: 100vw;
+    width: 100%;
     background: linear-gradient(180.00deg, rgb(105, 34, 255),rgb(66, 0, 205) 100%);
 }
 
 .content-wrap {
     @include centerredContentVH($cross: center, $main: flex-start, $direction: column, $gap: 0px);
-    width: 920px;
-    padding: 0 42px;
-    max-width: 954px;
-    background: url(../../assets/images/pricing-line-bg.svg) no-repeat center bottom 23px;
+    width: 100%;
+    max-width: 952px;
+    padding: 0 4%;
+    background: url(../../assets/images/pricing-line-bg.svg) no-repeat center;
+    background-position-y: 79%;
     background-size: contain;
 }
 
 .prices__header {
-    margin-bottom: 29px;
+    width: 100%;
+    margin-bottom: 3%;
     align-self: flex-start;
 }
 
 .prices__list {
-    @include centerredContentVH($cross: flex-start, $main: center, $direction: row, $gap: 30px);
-    margin-bottom: 56px;
+    @include centerredContentVH($cross: flex-start, $main: space-between, $direction: row, $gap: 0px);
+    position: relative;
+    min-height: 545px;
+    min-width: 255px;
+    max-width: 825px;
+    width: 100%;
+    margin-bottom: 7.15%;
+    container-type: inline-size;
+    container-name: pricesList;
     
 }
 
 .prices__list-item {
+    transition: 0.2s ease;
 
     &:nth-child(2n+1) {
-        margin-top: 40px;
+        margin-top: 5%;
     }
+
+    @container pricesList (max-width: 780px) {
+        position: absolute;
+
+        &:hover {
+            z-index: 4;
+        }
+
+        &:nth-child(2n+1) {
+            margin-top: auto;
+        }
+
+        &:nth-child(1) {
+
+            left: 0;
+        }
+
+        &:nth-child(2) {
+
+            margin-top: 5%;
+            left: 50%;
+            transform: translateX(-50%);
+        }
+
+        &:nth-child(3) {
+
+            margin-top: 12%;
+            left: auto;
+            right: 0;
+        }
+    }
+
+
+}
+
+.prices__list-item_darkened {
+    @container pricesList (max-width: 430px) {
+        filter: brightness(0.5);
+    }
+}
+
+.prices__btn {
+    width: 100%;
+    height: 2cqw;
+    max-width: 255px;
+    max-height: 38px;
+    min-height: 30px;
 }
