--- a/src/components/UI/section-header/Section-header.module.scss
+++ b/src/components/UI/section-header/Section-header.module.scss
@@ -5,7 +5,8 @@
     @include centerredContentVH(center, flex-start);
 
     position: relative;
-    height: 90px;
+    width: 100%;
+    height: auto;
     overflow: hidden;
 
     &__text {
@@ -14,16 +15,19 @@
         font-weight: $fw-thkst;
         font-size: $fs-lgst;
         text-transform: uppercase;
+        padding: 3% 0;
     }
 
     &__decoration {
         position: absolute;
-        top: -14px;
-        left: 0;
+        width: 100%;
+        top: -7%;
+        left: -0.3%;
 
         &_shifted {
             @extend .section-header__decoration;
-            left: -10px;
+            left: -2%;
+            top: -12%;
         }
     }
 }
