feat: add new variables

--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -10,7 +10,7 @@ $clr-lt: rgb(228, 228, 243);
 $clr-ltr: rgb(255, 255, 255);
 $clr-dk: rgb(137, 148, 177);
 $clr-dkr: rgb(96, 96, 96);
-
+$clr-base-dk-transp: rgb(47 36 195 / 81%);
 //gradients
 $clr-rad-grad-violet: radial-gradient(93.00% 93.00% at 50% 7.000000000000001%,rgb(143, 0, 255),rgb(81, 14, 225) 82.813%);
 $clr-rad-grad-pink: radial-gradient(134.00% 134.00% at 50% 0%,rgb(235, 0, 255),rgb(81, 14, 225) 82.813%);
