--- a/src/components/navigation-bar/navigation-bar.module.scss
+++ b/src/components/navigation-bar/navigation-bar.module.scss
@@ -6,7 +6,8 @@
     @include centerredContentVH($cross: center, $main: flex-start, $direction: column, $gap: 61px);
 
     @media screen and (max-width: $sw-max) {
-        padding: 16px 64px 16px 16px;
+        padding: 16px 16px 16px 16px;
+        align-items: stretch;
     }
 }
 
@@ -14,13 +15,16 @@
     @include centerredContentVH($cross: center, $main: flex-start, $direction: column, $gap: 17px);
 
     @media screen and (max-width: $sw-max) {
-        gap: 0;
-        flex-direction: row;
-        justify-content: center;
-        width: 100%;
+        flex-direction: column;
+        gap: 7cqh;
     }
 
     &-item:first-child {
         margin-bottom: calc(61px - 17px);
+
+        @media screen and (max-width: $sw-max) {
+            margin-bottom: 11%;
+        }
+
     }
 }
