--- a/src/components/UI/anchor/Anchor.module.scss
+++ b/src/components/UI/anchor/Anchor.module.scss
@@ -34,10 +34,20 @@ $block-height: 43px;
             width: 21px;
             height: $block-height;
             background: url('../../../assets/icons/triangle.svg') no-repeat;
+
+            @media screen and (max-width: $sw-max) {
+                content: '';
+                display: block;
+                position: absolute;
+                right: 43%;
+                top: 31px;
+                transform: rotate(90deg);
+            }
         }
 
         .anchor__link {
             color: $clr-base-dk;
+            font-size: max(15px, 1rem);
 
             @media (hover: hover) {
                 &:hover {
@@ -64,6 +74,7 @@ $block-height: 43px;
     width: 100%;
     height: 100%;
     text-decoration: none;
+    font-size: max(15px, 1rem);
 
 
     @media (hover: hover) {
