--- a/src/components/page-layout/page-layout.module.scss
+++ b/src/components/page-layout/page-layout.module.scss
@@ -8,7 +8,11 @@
 
 .header {
     width: 100%;
-    margin-bottom: 13%;
+    margin-bottom: 168px;
+
+    @media screen and (max-width: 1316px) {
+        margin-bottom: 13%;
+    }
 }
 
 .page-layout {
@@ -99,13 +103,19 @@
         transform: translateY(-50%);
         right: calc(50% - (920px / 1.8) - 2vw);
 
-        @media screen and (max-width: $sw-breakPoint-2) {
+        @media screen and (max-width: 1316px) {
+            z-index: 5
+        }
+
+        @media screen and (max-width: 1200px) {
             position: fixed;
             order: 1;
-            top: auto;
-            bottom: 6dvh;
-            right: 50%;
-            transform: translateX(50%);
+            top: 50dvh;
+            right: 16px;
+        }
+
+        @media screen and (max-width: 1045px) {
+            display: none;
         }
     }
 }
