feat: add new variable

--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -43,6 +43,7 @@ $fw-thkst: 900;
 
 //screen width
 $sw-max: 1316px;
+$sw-breakPoint-1: 1200px;
 $sw-breakPoint-2: 1090px;
 $sw-breakPoint-3: 950px;
 $sw-breakPoint-4: 840px;
