--- a/src/components/burger-nav/burger-nav.module.scss
+++ b/src/components/burger-nav/burger-nav.module.scss
@@ -2,7 +2,7 @@
 @import "../../styles/abstracts/variables";
 
 .navigation {
-  padding: 2% 2% 0;
+  padding: 16px;
 }
 .navigation__menu {
   display: none;
