--- a/src/components/atmosphere-section/atmosphere-section.module.scss
+++ b/src/components/atmosphere-section/atmosphere-section.module.scss
@@ -45,7 +45,6 @@
     width: 100%;
     align-self: flex-start;
     padding-right: 17px;
-    flex-wrap: wrap;
     max-width: 530px;
     gap: 2cqw;
     max-width: 547px;
@@ -79,6 +78,10 @@
     @media  screen and (max-width:  840px) {
         flex-direction: column;
         align-items: flex-start;
+    }
+
+    @media  screen and (max-width:  620px) {
+        background: none;
     }
 }
 
@@ -118,7 +121,7 @@
     display: flex;
     justify-content: center;
     gap: 2cqw;
-    flex-wrap: wrap;
+    //flex-wrap: wrap;
     padding-right: 11px;
 
     @media screen and (max-width: 326px) {
