--- a/src/components/page-layout/page-layout.module.scss
+++ b/src/components/page-layout/page-layout.module.scss
@@ -10,8 +10,8 @@
     width: 100%;
     margin-bottom: 168px;
 
-    @media screen and (max-width: 1316px) {
-        margin-bottom: 13%;
+    @media screen and (max-width: 921px) {
+        margin-bottom: 20%;
     }
 }
 
@@ -20,7 +20,7 @@
     //gap: 15px;
     width: 100%;
     height: 100%;
-    margin: 29px 0 95px 0;
+    margin: 29px 0 0 0;
 
     @media screen and (max-width: $sw-max) {
         display: flex;
@@ -28,7 +28,7 @@
         flex-direction: column;
         align-items: center;
         gap: 0;
-        margin: 0 0 95px 0;
+        margin: 0;
     }
 }
 
@@ -107,7 +107,7 @@
             z-index: 5
         }
 
-        @media screen and (max-width: 1200px) {
+        @media screen and (max-width: 1120px) {
             position: fixed;
             order: 1;
             top: 50dvh;
