--- a/src/components/advantages-section/advantages-section.module.scss
+++ b/src/components/advantages-section/advantages-section.module.scss
@@ -45,7 +45,7 @@
     transition: 0.2s ease;
 
     @media screen and (max-width: $sw-breakPoint-5){
-        column-gap: 20%;
+        //column-gap: 20%;
         row-gap: 13%;
         margin-bottom: 34%;
     }
