--- a/src/styles.css
+++ b/src/styles.css
@@ -28,3 +28,34 @@ ul {
 a {
     text-decoration: none;
 }
+
+.slider-container {
+    width: 100%;
+    padding-bottom: 4%;
+
+}
+
+.swiper-slide-shadow-coverflow {
+    display: none;
+}
+
+.swiper-slide {
+    width: 100%;
+
+
+}
+
+.swiper-slide > div:first-child {
+    display: flex;
+    justify-content: center;
+}
+.swiper-wrapper {
+    margin-bottom: 3%;
+}
+/*.swiper-slide:nth-child(2) > div:first-child > article {*/
+/*    box-shadow: 0px 0px 18px 0px rgb(133, 255, 90);*/
+/*}*/
+
+.swiper-pagination-bullet-active {
+    background: #63f163;
+}
