--- a/src/components/page-layout/page-layout.module.scss
+++ b/src/components/page-layout/page-layout.module.scss
@@ -34,6 +34,9 @@
 
 .page-layout__content {
     width: 100%;
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
 
     @media screen and (max-width: $sw-max) {
         order: 3;
