--- a/src/styles.css
+++ b/src/styles.css
@@ -10,6 +10,8 @@
 }
 
 html {
+    scroll-behavior: smooth;
+    scroll-padding-top: 50px;
     @media screen and (max-width: 840px) {
         font-size: 1.9vw;
     }
